--- a/style.css
+++ b/style.css
@@ -25,5 +25,18 @@ min-height: 100vh;
   }
 
   h1{
-color: var(--cor-destaque);
+
   }
+  button {
+    background-color: var(--cor-principal);
+    color: var(--cor-destaque);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: var(--cor-destaque);
+    color: var(--cor-secundaria);
+}
